# registry_downloader

./: .cursorrules  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/registry_downloader/: __init__.py  __main__.py  runner.py
src/registry_downloader/core/: client.py  progress.py  threadpool.py
src/registry_downloader/downloaders/: __init__.py  base.py  ee.py  fi.py  lv.py
tests/: test_cli.py  test_core.py  test_downloaders.py
