[project]
name = "registry_downloader"
version = "0.1.0"
description = "Download & analyze business registry data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
    "tqdm>=4.67.0",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-tqdm>=4.66.0.20240417",
]

[project.scripts]
registry-downloader = "registry_downloader.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registry_downloader"]
