[project]
name = "registry_downloader"
version = "0.1.5"
description = "Download & analyze business registry data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chardet>=5.2.0",
    "httpx>=0.27.2",
    "tqdm>=4.67.0",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-tqdm>=4.66.0.20240417",
]
authors = [
    {name = "Martin Salo", email = "martin@salo.ee"}
]
keywords = ["registry", "downloader", "business data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
registry_downloader = "registry_downloader:main"

[project.urls]
"Homepage" = "https://github.com/salomartin/registry_downloader"
"Bug Tracker" = "https://github.com/salomartin/registry_downloader/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
directory = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/registry_downloader"]

[tool.uv]
compile-bytecode = true
dev-dependencies = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.33.0",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
